--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
+DOCKER_USER_ID=1001 #Adicionar o user_id do sistema operacional
+DOCKER_GROUP_ID=1001
+DOCKER_HTTP_PORT=80
+DOCKER_DB_PORT=5432
+DOCKER_FPM_PORT=9000
+DOCKER_CACHE_PORT=6378
+DOCKER_MAIL_SMTP_PORT=1025
+DOCKER_MAIL_HTTP_PORT=8025
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
@@ -42,7 +51,7 @@ CACHE_PREFIX=
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=cache
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
