--- a/compose.yml
+++ b/compose.yml
@@ -57,7 +57,7 @@ services:
       restart: unless-stopped
       working_dir: /var/www
       mem_limit: 400M
-      command: ['bash', '-c', 'composer install && php artisan migrate && php artisan horizon']
+      command: ['bash', '-c', 'composer install && php artisan migrate && php artisan db:seed && php artisan horizon']
       depends_on:
         - app
         - db
@@ -70,6 +70,7 @@ services:
         container_name: sale-system-redis
         image: redis:latest
         mem_limit: 400M
+        restart: unless-stopped
         ports:
             - "6379:6379"
         networks:
