--- a/compose.yml
+++ b/compose.yml
@@ -8,7 +8,7 @@ services:
         restart: unless-stopped
         mem_limit: 200M
         ports:
-            - "80:80"
+            - "${DOCKER_HTTP_PORT}:80"
         volumes:
             - ./:/var/www
             - ./.docker/nginx/default.d/:/etc/nginx/conf.d/
@@ -61,6 +61,7 @@ services:
       depends_on:
         - app
         - db
+        - cache
       volumes:
         - .:/var/www
       networks:
