--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,6 @@
 volumes:
     db:
+    pgadmin_data:
 
 services:
     nginx:
@@ -67,6 +68,18 @@ services:
       networks:
         - sale-system
 
+    pgadmin:
+      container_name: sale-system-manager-db
+      image: dpage/pgadmin4:latest
+      environment:
+       PGADMIN_DEFAULT_EMAIL: admin@example.com
+       PGADMIN_DEFAULT_PASSWORD: admin
+      ports:
+        - "5050:80"
+      volumes:
+        - pgadmin_data:/var/lib/pgadmin
+      networks:
+        - sale-system
     cache:
         container_name: sale-system-redis
         image: redis:latest
