--- a/.env.testing
+++ b/.env.testing
@@ -9,7 +9,7 @@ DOCKER_MAIL_HTTP_PORT=8025
 
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:4T9Zp/kGL2cdVR+U69rU/rl34yLJAogNqkjtp11kwns=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -28,12 +28,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=db
-DB_PORT=5432
-DB_DATABASE=sale-system
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
